...
    <string name="cd_open_github_repo">Open github repo of this app</string>
    <string name="cd_background_image">background image</string>
    <string name="cd_save_button">Press to save data</string>
    <string name="cd_action_delete">Delete record</string>
    <string name="cd_action_edit">Edit record</string>
    <string name="cd_action_share">Share record</string>
    <string name="cd_toggle_sensitive_data_visibility">Toggle sensitive data visibility</string>
    <string name="cd_add_new_record_button">Add new record button</string>
    <string name="cd_search_bar">Search records by title</string>
    <string name="cd_clear_search_bar">Clear search bar</string>"
    <string name="cd_back_button">Back button</string>


...
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="do_not_ask_again">Don\'t ask again</string>
    <string name="allow">Allow</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="retry">Retry</string>


    <!--    User data type text-->
    <string name="type_display_account">Bank Account</string>
    <string name="type_display_card">Card</string>
...
    <!--    <string name="app_name">Safe Box</string>-->
    <string name="app_subtitle">Safely store your private data</string>
    <string name="enter_password">Enter password </string>
    <string name="blank_validation_text">Enter something !</string>
    <string name="length_validation_text">Too short !</string>
    <string name="special_char_validation_text">Enter a special character (e.g. @, *, $)</string>
    <string name="case_validation_text">Must include at least one uppercase(A) and one lowercase letter(a).</string>
    <string name="numeric_validation_text">Enter at least two numbers (e.g. 1, 2, 3)</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="unlock">unlock</string>
    <string name="collapse">Collapse</string>
    <string name="login_data">Login Data</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_card">Bank Card</string>
    <string name="secure_note">Secure Note</string>
    <string name="enter_hint">Enter a hint</string>
    <string name="show_hint">Show Hint</string>
    <string name="hide_hint">Hide Hint</string>
    <string name="hint">Hint</string>
    <string name="title">Title </string>
    <string name="url">URL</string>
    <string name="user_id">User Id </string>
    <string name="notes">Notes</string>
    <string name="bank_account_data">Bank Account Data</string>
    <string name="account_number">Account Number </string>
...
    <string name="branch_name">Branch Name</string>
    <string name="branch_address">Branch Address</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="micr_code">MICR Code</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="password_is_ok">Password is OK</string>
    <string name="welcome">Welcome !</string>
    <string name="set_password_help_text">Set a strong master password</string>
    <string name="timeout_dialog_title">Timeout</string>
    <string name="timeout_dialog_message">You were away for too long. Please click OK to login to app again</string>
    <string name="timeout_dialog_positive_button_text">OK</string>
    <string name="created_on">Created on</string>
    <string name="updated_on">Updated on</string>
...
